--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <section id="img2">
             <div class="info">
                 <a href="#img3">
-                    <div class="next"><span class="material-symbols-outlined">keyboard_double_arrow_down</span></div>
+                    <label for="#img3">
+                        <div class="next"><span class="material-symbols-outlined">keyboard_double_arrow_down</span></div>
+                    </label>
                 </a>
             <div class="conteudo"  data-aos="fade-up"><h2>MODELO CONCEITO</h2>
                 <p>À primeira vista, no caso do Audi Activesphere, temos um grande SUV cupê. Com quase 5 metros de comprimento e 2 metros de largura, o protótipo pode se tornar um possível substituto para o Audi Q8 em alguns anos.</p>
